# UltraQC

./: .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  MANIFEST.in  README.md  package.json  prestart.sh  pyproject.toml  setup.py  webpack.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  general_question.md
.github/workflows/: docker_compose_build.yml  publish_docs.yaml
data/multiqc/DAY_final_multiqc_data/: bcftools-stats-subtypes.txt  bcftools_stats_indel-lengths.txt  bcftools_stats_variant_depths.txt  bcftools_stats_vqc_Count_Indels.txt  bcftools_stats_vqc_Count_SNP.txt  bcftools_stats_vqc_Count_Transitions.txt  bcftools_stats_vqc_Count_Transversions.txt  fastqc-1-status-check-heatmap.txt  fastqc-1_adapter_content_plot.txt  fastqc-1_per_base_n_content_plot.txt  fastqc-1_per_base_sequence_quality_plot.txt  fastqc-1_per_sequence_gc_content_plot_Counts.txt  fastqc-1_per_sequence_gc_content_plot_Percentages.txt  fastqc-1_per_sequence_quality_scores_plot.txt  fastqc-1_sequence_counts_plot.txt  fastqc-1_sequence_duplication_levels_plot.txt  goleft_bin.txt  goleft_indexcov-bin-plot.txt  goleft_indexcov-roc-plot.txt  mosdepth-coverage-per-contig-multi.txt  mosdepth-cumcoverage-dist-id.txt  mosdepth-xy-coverage-plot.txt  mosdepth_cov_dist.txt  mosdepth_perchrom.txt  multiqc_RIH0_ANA0-HG002_DBC0_0.strobe.vb2.txt  multiqc_alignstats_combo.txt  multiqc_bcftools_stats_1.txt  multiqc_citations.txt  multiqc_data.json  multiqc_fastqc.txt  multiqc_general_stats.txt  multiqc_giab_concordance.txt  multiqc_norm_cov_evenness_combo.txt  multiqc_qualimap_bamqc_genome_results.txt  multiqc_rules_benchmark_data.txt  multiqc_samtools_flagstat.txt  (+17 more)
deployment/: .env  docker-compose.yml  nginx.conf
docs/source/: api_reference.rst  cli.rst  conf.py  modules.rst  ultraqc.api.rst  ultraqc.model.rst  ultraqc.public.rst  ultraqc.report_plot.rst  ultraqc.rest_api.rst  ultraqc.rst  ultraqc.user.rst  ultraqc.utils.rst
megaqc/: __init__.py  app.py  auth.py  cli.py  commands.py  database.py  scheduler.py  settings.py  wsgi.py
megaqc/api/: utils.py  views.py
megaqc/migrations/: env.py
megaqc/model/: models.py
megaqc/public/: forms.py  views.py
megaqc/rest_api/: fields.py  plot.py  schemas.py  utils.py  views.py
megaqc/templates/: layout.html
megaqc/user/: forms.py  models.py  views.py
megaqc/utils/: __init__.py  settings.py
tests/: conftest.py  factories.py  test_config.py  test_forms.py  test_functional.py  test_models.py
tests/api/: conftest.py  test_api.py  test_build_filter.py  test_current_user.py  test_filter.py  test_permissions.py  test_plot.py  test_upload.py  utils.py
ultraqc/: __init__.py  app.py  auth.py  cli.py  commands.py  database.py  extensions.py  scheduler.py  settings.py  version.py  wsgi.py
ultraqc/api/: constants.py  utils.py  views.py
ultraqc/migrations/: env.py
ultraqc/model/: models.py
ultraqc/plotting/: __init__.py  base.py  registry.py  spec.py
ultraqc/public/: views.py
ultraqc/rest_api/: filters.py  plot.py  schemas.py  utils.py  views.py
ultraqc/templates/: footer.html  layout.html  layout_blank.html  nav.html
ultraqc/user/: models.py  views.py
ultraqc/utils/: config_defaults.yaml  settings.py
uploads/: README.md
(+35 files in other folders)
